--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 									<a href="#home">Home</a>
 									<a href="#about">About Me</a>
 									<a href="#gallery">Gallery</a>
-									<a href="#contact">Contact</a>
 								</nav>
 								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 							</div>
@@ -70,7 +69,7 @@
 				            <div class="carousel-caption d-md-block">
 				              <h2 class="text-uppercase">Anne Norris Photography</h2>
 				              <p>
-								I take pictures of people. <br> It's pretty awesome.
+								DM me on Instagram @annemnorris for photoshoots! <br> Also reachable by email @annemnorris09@gmail.com
 				              </p>
 				            </div>
 				          </div>
@@ -80,6 +79,14 @@
 				              <h2 class="text-uppercase">Anne Norris Photography</h2>
 				              <p>
 								I take pictures of people. <br> It's pretty awesome.
+				              </p>
+				            </div>
+				          </div>
+					<div class="carousel-item" style="background-image: url('img/photerz.jpg')">
+				            <div class="carousel-caption d-md-block">
+				              <h2 class="text-uppercase">Anne Norris Photography</h2>
+				              <p>
+							DM me on Instagram @annemnorris for photoshoots! <br> Also reachable by email @annemnorris09@gmail.com
 				              </p>
 				            </div>
 				          </div>
@@ -167,7 +174,6 @@
 			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 			<script src="js/vendor/bootstrap.min.js"></script>
-			<script src="js/jquery.ajaxchimp.min.js"></script>
 			<script src="js/owl.carousel.min.js"></script>
 			<script src="js/jquery.nice-select.min.js"></script>
 			<script src="js/jquery.sticky.js"></script>
