--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				            <div class="carousel-caption d-md-block">
 				              <h2 class="text-uppercase">Anne Norris Photography</h2>
 				              <p>
-								DM me on Instagram @annemnorris for photoshoots! <br> Also reachable by email @annemnorris09@gmail.com
+								Instagram: @annemnorris <br> Email: annemnorris09@gmail.com
 				              </p>
 				            </div>
 				          </div>
@@ -86,7 +86,7 @@
 				            <div class="carousel-caption d-md-block">
 				              <h2 class="text-uppercase">Anne Norris Photography</h2>
 				              <p>
-							DM me on Instagram @annemnorris for photoshoots! <br> Also reachable by email @annemnorris09@gmail.com
+							Instagram: @annemnorris <br> Email: annemnorris09@gmail.com
 				              </p>
 				            </div>
 				          </div>
