--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				            </div>
 				          </div>
 				          <!-- Slide Two - Set the background image for this slide in the line below -->
-				          <div class="carousel-item" style="background-image: url('img/photer28.jpg')">
+				          <div class="carousel-item" style="background-image: url('img/photer28.JPG')">
 				            <div class="carousel-caption d-md-block">
 				              <h2 class="text-uppercase">Anne Norris Photography</h2>
 				              <p>
@@ -140,15 +140,15 @@
 						<img src="img/photer6.jpg" alt=""></a>
 						<img src="img/photer2.jpg" alt=""></a>
 						<img src="img/photer4.jpg" alt=""></a>
-						<img src="img/photer29.jpg" alt=""></a>
+						<img src="img/photer29.JPG" alt=""></a>
 						<img src="img/photer22.jpg" alt=""></a>
 						<img src="img/photer12.jpg" alt=""></a>
-						<img src="img/photer30.jpg" alt=""></a>
-						<img src="img/photer21.jpg" alt=""></a>
+						<img src="img/photer30.JPG" alt=""></a>
+						<img src="img/photer21.JPG" alt=""></a>
 						<img src="img/photer18.jpg" alt=""></a>
-						<img src="img/photer9.jpg" alt=""></a>
-						<img src="img/photer14.jpg" alt=""></a>
-						<img src="img/photer31.jpg" alt=""></a>
+						<img src="img/photer9.JPG" alt=""></a>
+						<img src="img/photer14.JPG" alt=""></a>
+						<img src="img/photer31.JPG" alt=""></a>
 						<img src="img/p1.jpg" alt=""></a>
 						<img src="img/p4.jpg" alt=""></a>
 						<img src="img/p3.jpg" alt=""></a>
