--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						<img src="img/photer18.jpg" alt=""></a>
 						<img src="img/photer31.JPG" alt=""></a>
 						<img src="img/p1.jpg" alt=""></a>
-						<img src="img/p4.jpg" alt=""></a>
+						<img src="img/p4.jpeg" alt=""></a>
 						<img src="img/p3.jpg" alt=""></a>
 					</div>
 				</div>
