--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<meta charset="UTF-8">
 		<!-- Site Title -->
 		<title>Anne Norris Photography</title>
+		<link rel="icon" type="image/x-icon" href="img/an-icon.ico"/>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 			<!--
